--- a/scss/app.scss
+++ b/scss/app.scss
@@ -29,22 +29,41 @@ a{
 	display: inline-block;
 	font-weight: 300;
 	text-decoration: none;
+	font-size: 1.1rem;
+}
+a:hover{
+	text-decoration: underline;
 }
 h1{
 	font-weight: 900;
-	font-size: 3rem;
-	line-height: 4rem;
+	font-size: 43px;
+	line-height: 47px;
+	color: $blue;
 }
 
 // Buttons etc.
 .btn{
-	padding: 15px 35px;
+	padding: 15px 70px 15px 35px;
 	text-transform: uppercase;
 	font-size: 1.25rem;
 	border-radius: 31px;
+	font-weight: normal;
+	transition: all 0.5s;
+	position: relative;
+}
+.btn:hover{
+	text-decoration: none;
+}
+.btn svg{
+	position: absolute;
+	right: 15px;
+    top: 20px;
 }
 .btn.blue-grad{
 	color: white;
+}
+.btn.blue-grad:hover{
+	opacity: 0.7;
 }
 
 // Colours
@@ -65,33 +84,103 @@ h1{
 }
 
 // Header
+header{
+	position: relative;
+}
+header .cta{
+text-align: center;
+    padding: 33px 25px 15px;
+    display: block;
+    width: 249px;
+    transition: all 0.5s;
+    position: absolute;
+    right: 40px;
+    color: white;
+    font-weight: normal;
+    font-size: 15px;
+    border-radius: 31.5px;
+    top: -25px;
+}
+header .cta .tel{
+	font-weight: 900;
+	display: block;
+	font-size: 30px;
+}
+header .cta:hover{
+	opacity: 0.8;
+}
+header .cta p{
+	margin: 0
+}
+#top-nav{
+	padding: 0.5rem;
+}
+#top-nav a{
+	color: $blue;
+}
+#top-nav a span{
+	font-weight: bold;
+}
+
 #bottom-nav{
 	background: $lightBlue;
-	padding: 1.5rem;
+	padding: 1.25rem;
+}
+#bottom-nav a{
+	color: $darkBlue;
+	font-weight: 900;
+}
+
+// Main Styling
+main{
+	padding: 100px 0
 }
 
 // Hero Banner
 .title--sub-text{
-	font-size: 2.5rem;
+	font-size: 23px;
 	font-weight: 300;
+	line-height: 30px;
+	width: 80%;
 }
 
 // Blobs
 .blobs{
 	position: relative;
+	height: 420px;
 }
 .blob-section{
 	position: absolute;
 }
 .blob-section#blob-1{
 	z-index: 4;
+    left: 30px;
+    top: 30px;
+    width: 90%;
 }
 .blob-section#blob-2{
 	z-index: 3;
 }
 .blob-section#blob-3{
 	z-index: 2;
+	transform: rotate(65deg);
 }
 .blob-section#blob-4{
 	z-index: 1;
+	transform: rotate(-27deg);
+}
+
+// Media Queries
+@media screen and (max-width: 640px){
+
+}
+@media screen and (max-width: 1640px){
+	header .cta{
+		display: none;
+	}	
+}
+@media screen and (max-width: 1160px){
+	#top-nav{
+		display: none;
+	}
 }
