--- a/scss/app.scss
+++ b/scss/app.scss
@@ -130,6 +130,11 @@ header .cta p{
 	color: $darkBlue;
 	font-weight: 900;
 }
+#bottom-nav a i{
+	color: #249DC2;
+	font-size: 14px;
+	margin-left: 5px;
+}
 
 // Main Styling
 main{
